Bug 1244546 part 2 - Align the center point for pointerlock to meet widget's requirement. r=smaug

MozReview-Commit-ID: I4BS1pfyMLD

--HG--
extra : source : dd921cf05c244c7f61be8b1ff3bbdedc40644e1a